--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,10 @@
         "sensio/distribution-bundle": "~2.3",
         "sensio/framework-extra-bundle": "~3.0",
         "sensio/generator-bundle": "~2.3",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+        "sonata-project/admin-bundle": "@stable",
+        "sonata-project/doctrine-orm-admin-bundle": "@stable",
+        "simplethings/entity-audit-bundle": "@stable"
     },
     "scripts": {
         "post-install-cmd": [
