--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -78,3 +78,6 @@ sonata_block:
         sonata.admin.block.admin_list:
             contexts:   [admin]
         # Your other blocks
+
+raindrop_sonata_theme:
+    theme: cosmo
