--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "sonata-project/admin-bundle": "@stable",
         "sonata-project/doctrine-orm-admin-bundle": "@stable",
         "simplethings/entity-audit-bundle": "@stable",
-        "raindrop/sonata-theme-bundle": "1.1.0.*@dev"
+        "raindrop/sonata-theme-bundle": "1.1.0.*@dev",
+        "friendsofsymfony/user-bundle": "~2.0@dev"
     },
     "scripts": {
         "post-install-cmd": [
