Added new functionality in doc

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -82,7 +82,7 @@ sonata_block:
 raindrop_sonata_theme:
     theme: cosmo
 
-#FOSUser Bundle
+#FOSUser Bundle Config
 fos_user:
     db_driver: orm
     firewall_name: main
