--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "sonata-project/doctrine-orm-admin-bundle": "@stable",
         "simplethings/entity-audit-bundle": "@stable",
         "raindrop/sonata-theme-bundle": "1.1.0.*@dev",
-        "friendsofsymfony/user-bundle": "~2.0@dev"
+        "friendsofsymfony/user-bundle": "~2.0@dev",
+        "doctrine/doctrine-fixtures-bundle": "2.2.*"
     },
     "scripts": {
         "post-install-cmd": [
