--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,13 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "sonata-project/admin-bundle": "@stable",
         "sonata-project/doctrine-orm-admin-bundle": "@stable",
+        "sonata-project/easy-extends-bundle":  "@stable",
+        "sonata-project/user-bundle": "2.2.*",
         "simplethings/entity-audit-bundle": "@stable",
         "raindrop/sonata-theme-bundle": "1.1.0.*@dev",
-        "friendsofsymfony/user-bundle": "~2.0@dev",
-        "doctrine/doctrine-fixtures-bundle": "2.2.*"
+        "friendsofsymfony/user-bundle": "1.3.*@dev",
+        "doctrine/doctrine-fixtures-bundle": "2.2.*",
+        "jms/serializer-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
