--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -55,10 +55,21 @@ doctrine:
         # if using pdo_sqlite as your database driver, add the path in parameters.yml
         # e.g. database_path: "%kernel.root_dir%/data/data.db3"
         # path:     "%database_path%"
+        
+        #Sonata User Bundle
+        types:
+            json: Sonata\Doctrine\Types\JsonType
 
     orm:
         auto_generate_proxy_classes: "%kernel.debug%"
         auto_mapping: true
+        
+        #Sonata user Bundle
+        #entity_managers:
+        #    default:
+        #        mappings:
+        #            ApplicationSonataUserBundle: ~
+        #            SonataUserBundle: ~
 
 # Swiftmailer Configuration
 swiftmailer:
@@ -87,3 +98,23 @@ fos_user:
     db_driver: orm
     firewall_name: main
     user_class: CB\WarehouseBundle\Entity\User
+    #Sonata User Bundle
+    #user_class: Application\Sonata\UserBundle\Entity\User
+    
+    #group:
+    #    group_class:   Application\Sonata\UserBundle\Entity\Group
+    #    group_manager: sonata.user.orm.group_manager
+    #service:
+    #    user_manager: sonata.user.orm.user_manager
+    
+#Sonata User Bundle configuration
+#sonata_user:
+#    security_acl: true
+#    manager_type: orm
+#
+#sonata_block:
+#    blocks:
+#        # used to display the menu in profile pages
+#        sonata.user.block.menu:    
+#        # used to display menu option (login option)
+#        sonata.user.block.account: 
