--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "raindrop/sonata-theme-bundle": "1.1.0.*@dev",
         "friendsofsymfony/user-bundle": "1.3.*@dev",
         "doctrine/doctrine-fixtures-bundle": "2.2.*",
-        "jms/serializer-bundle": "dev-master"
+        "jms/serializer-bundle": "dev-master",
+        "phpunit/phpunit": "4.2.*"
     },
     "scripts": {
         "post-install-cmd": [
