Creation of warehouse Map functions in LocationController

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,4 +1,9 @@
+
+cb_demo:
+    resource: "@CBDemoBundle/Controller"
+
 # CBWarehouseBundle routes
+
 _cb_warehouse:
     resource: "@CBWarehouseBundle/Controller"
 
