--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -5,7 +5,7 @@ cb_demo:
 # CBWarehouseBundle routes
 
 _cb_warehouse:
-    resource: "@CBWarehouseBundle/Controller"
+    resource: "@CBWarehouseBundle/Controller"   
 
 admin:
     resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
@@ -59,3 +59,5 @@ fos_user_change_password:
 #sonata_user:
 #    resource: '@SonataUserBundle/Resources/config/routing/admin_security.xml'
 #    prefix: /admin
+
+# app/config/routing.yml
